src/App.css
* {
  margin: auto;
  box-sizing: border-box;
}
body{
  overflow-x: hidden;
}

.new-layout{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.App {
  background-color: #1e1e1e;
  /* background-image: linear-gradient(180deg, #102027 0%, #191919 29%); */
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: center;
  /* width: fit-content; */
  min-height: 100vh;   /*Acts as canvas */
  width: 100%; /*Acts as canvas */
  /* height: fit-content; */
}
.container{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.features{
  margin-top: 0;
}

.content,.container01 {
  /* background: 
  linear-gradient(
      to left bottom,
      rgb(50, 47, 223) 0%,
      rgba(0, 0, 0, 0.2) 30%,
      rgba(0, 0, 0, 0.2) 90%
    ),
    linear-gradient(
      to bottom,
      rgb(11, 66, 218) 0%,
      rgb(37, 19, 196) 5%,
      rgba(0, 0, 0, 1) 30%
    ); */
  background-blend-mode: exclusion;
  /* padding: 15vh; */
  /*height: 50vh;*/
  width:100 vw;
  font-size: larger;
  text-align: center;
  justify-content: center;
  align-items: center;
}

.content{
  border-radius: 20px;
  padding: 2em;
  width: 90vw;
  margin: 0;
  margin-top: 200px;
}

.homepageCard {
  background-color: aliceblue;
}
.about {
  width: 100vw;
  min-height: 25vh;
  overflow: hidden;
}


.content2 {
  padding: 5em;
  text-align: center;
  align-items: center;
  position: relative;
  height: 120vh;
  width: 100%;
  z-index: 1;
}
.content2::before {
  content: "";
  /* width: 100%; */
  background-image: url("/src/assets/images/team.jpeg");
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  filter: grayscale(80%) opacity(1.0) blur(2px); /* Adjust opacity as needed */
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}
.content1{
  padding: 5em;
  text-align: center;
  align-items: center;
}
.loader {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
}

.menu {
  margin: 2em;
  border: solid red 2px;
}
.loading-spinner {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #171923;
  min-height: 100vh;
  min-width: 100vw;
  z-index: 1;
  background-size: cover;
}

.loading-logo {
  width: 120px;
  height: 120px;
}
.loading-spinner:after {
  content: "";
  position: absolute;
  justify-content: center;
  align-items: center;
  width: 180px;
  height: 180px;
  background-color: rgba(255, 255, 255, 0);
  border-radius: 100%;
  box-shadow: 0 4px 4px 0 rgb(118, 189, 63);
  transition: all 1s linear;
  animation: lds-eclipse 1s linear infinite;
}

@keyframes spinning {
  0% {
    transform: translate(-50%, -50%) scale(1) translateZ(0);
  }
  50% {
    transform: translate(-50%, -50%) scale(1.1) translateZ(0);
  }
  100% {
    transform: translate(-50%, -50%) scale(1) translateZ(0);
  }
}

@keyframes lds-eclipse {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  50% {
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}


/* Teams page */

.team-heading{
  color: white;
  font-family: "Orbitron", sans-serif;
}

.our-team {
	text-align: center;
  margin: 5em auto;
  height: 10em;
  width : 10em;
}

.our-team .pic {
	position: relative;
	border-radius: 50%;
	overflow: hidden;
}

.our-team .pic:before {
	content: "";
	width: 100%;
	height: 100%;
	border-radius: 50%;
	position: absolute;
	top: 0;
	left: 0;
	box-shadow: 0 0 0 0 #6498ff98 inset;
	opacity: 0.5;
	transition: all 1s ease-in-out 0s;
}

.our-team:hover .pic:before {
	box-shadow: 0 0 0 400px #6498ff98 inset;
}

.pic img {
	width: 10em;
	height: 10em;
}

.our-team .social-links {
	width: 100%;
	padding: 0;
	margin: 0;
	list-style: none;
	position: absolute;
	top: 50%;
	left: 0;
}

.our-team .social-links li {
	display: inline-block;
	margin-right: 10px;
	transform: scale(0, 0);
	transition: all 0.7s ease-in-out 0s;
}

.our-team:hover .social-links li:nth-child(1) {
	transition-delay: 0.1s;
	transform: scale(1, 1);
}

.our-team:hover .social-links li:nth-child(2) {
	transition-delay: 0.2s;
	transform: scale(1, 1);
}

.our-team:hover .social-links li:nth-child(3) {
	transform: scale(1, 1);
	transition-delay: 0.3s;
}

.our-team:hover .social-links li:nth-child(4) {
	transition-delay: 0.4s;
	transform: scale(1, 1);
}

.our-team:hover .social-links li:nth-child(5) {
	transition-delay: 0.5s;
	transform: scale(1, 1);
}

.our-team .social-links li a {
	font-size: 30px;
	color:white;
}

.our-team .social-links li a:hover {
	text-decoration: none;
}

.our-team .team-title {
	font-size: 22px;
	font-weight: bold;
	color: #add8e6;
	text-transform: capitalize;
	margin-top: 10px;
}

.our-team .post {
	display: block;
	font-size: 14px;
	color: #687177;
	text-transform: capitalize;
}

@media screen and (max-width: 990px) {
	.our-team {
		margin-bottom: 20px;
	}
  .card1{
    position: absolute;
    top: 0;
  }
  .card2{
    position: absolute;
    top: 35%;
  }
  .card3{
    position: absolute;
    top: 70%;
  }
  .content2{
    height: 1500px;
  }
  .container{
    margin-bottom: 75px;
  }
  .content{
    margin-top: 50px;
  }
}

.markdown-style{
  font-size: 17px;
  color: #BDE0FF;
  margin-left: 5px;
  font-weight: 500;
}
  
.slide-fade1 {
  transition: opacity 0.3s ease-in-out;
  display: none;
}

.slide-fade1.visible{
  opacity: 0.8;
  display:block;
  transform: translateY(-20px);
  position:absolute;
}



.carousel {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 60%;
  margin: auto;
}

.slide {
  flex: 1;
  opacity: 1;
  border: 1px solid #ccc;
  padding: 20px;
  text-align: center;
}

button {
  cursor: pointer;
  margin-top: 1rem;
}

.navigation-buttons button {
  color:#008080;
  padding: 1rem;
}
/* ... */

